[package]
name = "video-compressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.futures]
version = "0.3.17"

[dependencies.tokio]
version = "1.13.0"
features = ["full"]

[dependencies.regex]
version = "1.5.4"

[dependencies.lazy_static]
version = "1.4.0"